Fix NAME_PIECE_SUFFIX definition Add bottom padding to keyword index

--- a/gedcom-5.5.2.html
+++ b/gedcom-5.5.2.html
@@ -3370,7 +3370,7 @@ CHILD
 
         <dt id="name-piece-suffix-pe">NAME_PIECE_SUFFIX <span class="size">{Size=1:30}</span></dt>
         <dd>
-          <p>NAME_PIECE_SUFFIX is a non-indexing name piece that appears preceding the given name and surname parts.</p>
+          <p>NAME_PIECE_SUFFIX is a non-indexing name piece that appears after the given name and surname parts.</p>
 
           <p>Multiple suffixes are separated by a comma.</p>
 
