--- a/implementation-notes.html
+++ b/implementation-notes.html
@@ -192,7 +192,7 @@ Everyone is permitted to copy and distribute verbatim copies of this document, b
 
         <dt id="white-space-handling-change">White Space Handling</dt>
         <dd>
-          <p>White space handling has been simplified and clarified in GEDCOM 5.5.2. Reading and writing systems must implement the rules described in the <a href="gedcom-5.5.2.htmk#space-handling">Space Handling</a> section of the specification.</p>
+          <p>White space handling has been simplified and clarified in GEDCOM 5.5.2. Reading and writing systems must implement the rules described in the <a href="gedcom-5.5.2.html#space-handling">Space Handling</a> section of the specification.</p>
         </dd>
 
         <dt id="head-char-vers-change">HEAD.CHAR.VERS</dt>
